// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-44 {
  position: relative;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-46 {
  color: #574feb !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-46 test fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-44 {
  position: relative;
}

.emotion-44 {
  background-color: red;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-44 {
  position: relative;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-44 {
  position: relative;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-46 {
  color: #574feb !important;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-46 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-44 {
  position: relative;
}

.emotion-44 {
  background-color: red;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-43.emotion-43.emotion-43 {
  max-width: 100%;
  width: 100%;
  max-height: 300px;
  overflow-y: scroll;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.emotion-0 {
  -webkit-appearance: none;
  border: 1px solid #d9d9d9;
  border-radius: 6px;
  height: 2.75em;
  width: 100%;
  padding: 0.4em 0.8em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-0[disabled] {
  background-color: #f2f2f2;
  box-shadow: unset;
  cursor: not-allowed;
}

.emotion-0:hover:not(:disabled) {
  box-shadow: #eeedfd 0px 0px 0px 2px !important;
  border-color: #cccaf9;
}

.emotion-0:focus {
  outline: unset;
  z-index: 2;
  border-color: #574feb;
  box-shadow: #eeedfd 0px 0px 0px 3px !important;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 0.6;
}

.emotion-0::-moz-placeholder {
  opacity: 0.6;
}

.emotion-0:-ms-input-placeholder {
  opacity: 0.6;
}

.emotion-0::placeholder {
  opacity: 0.6;
}

.emotion-42 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-39 {
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02) !important;
  padding: 0.5rem 0;
  width: 100%;
  position: absolute;
  min-width: 200px;
  width: unset;
}

.emotion-40 {
  background-color: white;
  border-radius: 6px;
  max-width: 350px;
  z-index: 19900410;
  box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.15),0px 0px 4px 2px rgba(0,0,0,0.02);
}

.emotion-40:focus {
  outline: none;
  box-shadow: #aba7f5 0px 0px 0px 3px;
}

.emotion-12 {
  background-color: unset;
  cursor: pointer;
  display: block;
  font-weight: 600;
  padding: 0.375rem 1rem;
  text-align: left;
  width: 100%;
  -webkit-transition: background-color 0.1s;
  transition: background-color 0.1s;
}

a.emotion-12 {
  color: unset;
  fill: unset;
  -webkit-text-decoration: unset;
  text-decoration: unset;
}

a.emotion-12:hover {
  color: unset;
  fill: unset;
}

.emotion-12[disabled] {
  cursor: not-allowed;
  opacity: 0.5;
}

.emotion-12:not(:disabled):focus {
  outline: unset;
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):hover {
  background-color: #f7f7f7;
}

.emotion-12:not(:disabled):focus:active,
.emotion-12:not(:disabled):hover:active {
  background-color: #f2f2f2;
}

.emotion-12 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-11.emotion-11.emotion-11 {
  font-weight: 300;
}

.emotion-11.emotion-11.emotion-11[aria-selected="true"] {
  background-color: #f7f7f7;
}

.emotion-11.emotion-11.emotion-11[aria-disabled="true"] {
  color: #b3b3b3;
}

.emotion-7 {
  line-height: 1.2;
}

abbr.emotion-7 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-7 {
  font-family: monospace;
}

i.emotion-7 {
  font-style: italic;
}

kbd.emotion-7 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-7 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-7 {
  font-weight: bold;
}

sub.emotion-7,
sup.emotion-7 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-7,
u.emotion-7 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-7,
cite.emotion-7,
var.emotion-7,
em.emotion-7 {
  font-style: italic;
}

kbd.emotion-7,
pre.emotion-7,
samp.emotion-7 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-7 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-44 {
  position: relative;
}

.emotion-44 {
  background-color: red;
}

<div
  aria-expanded="false"
  aria-haspopup="listbox"
  aria-owns="test"
  class="emotion-44 emotion-1 emotion-2 fp-Box fp-Autosuggest"
>
  <div
    class="emotion-1 emotion-2 emotion-5 emotion-6 fp-AutosuggestInput fp-InputWrapper fp-Box"
  >
    
    <input
      aria-autocomplete="list"
      aria-controls="test"
      aria-expanded="false"
      aria-haspopup="menu"
      aria-invalid="false"
      class="emotion-0 emotion-1 emotion-2 fp-Box fp-Input"
      loop=""
      placeholder="Search for a fruit..."
      type="text"
      value=""
    />
  </div>
  <ul
    aria-orientation="vertical"
    class="emotion-39 emotion-40 emotion-1 emotion-42 emotion-43 fp-AutosuggestPopover fp-Box fp-DropdownMenuPopover"
    data-dialog="true"
    hidden=""
    id="test"
    loop=""
    role="listbox"
    style="display: none;"
  >
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-1"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Apples
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-2"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Bananas
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-3"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Oranges
      </span>
    </li>
    <li
      aria-selected="false"
      class="emotion-11 emotion-12 emotion-1 emotion-2 fp-Box fp-DropdownMenuItem fp-AutosuggestItem"
      id="test-4"
      loop=""
      role="option"
    >
      <span
        class="emotion-7 emotion-1 emotion-2 emotion-6 fp-AutosuggestItemText fp-Box fp-Text"
      >
        Mangos
      </span>
    </li>
  </ul>
</div>
`;
